# SecMiniAgent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/industrial/: assets.csv  ids_alerts.json  ioc.txt  vulns.json
examples/wind_power/: alerts.csv
knowledge/playbooks/: brute_force_response.md  lateral_movement_response.md  suspicious_ot_access.md
knowledge/protocols/: modbus.md  opcua.md  s7comm.md
knowledge/rules/: ot_rules.md
knowledge/wind_power/: remote_maintenance_risks.md  wind_farm_security_context.md
secminiagent/: __init__.py  cli.py  config.py
secminiagent/agent/: __init__.py  events.py  loop.py  planner.py
secminiagent/context/: __init__.py  compressor.py  manager.py
secminiagent/llm/: __init__.py  base.py  fake.py  openai_client.py  volcengine_client.py  xfyun_client.py
secminiagent/parsers/: __init__.py  alert_csv_parser.py  alert_json_parser.py  asset_csv_parser.py  firewall_parser.py  ioc_parser.py  vuln_parser.py
secminiagent/rag/: __init__.py  backends.py  benchmark.py  chunker.py  documents.py  embeddings.py  evaluator.py  query.py  retriever.py  vector_store.py
secminiagent/safety/: __init__.py  command_policy.py  (+1 more)
tests/: __init__.py  test_agent_loop.py  test_alert_csv_parser.py  test_config.py  test_ot_rules.py  test_patch_tool.py  test_policy.py  test_rag_benchmark.py  test_rag_chunker.py  test_rag_eval_tools.py  test_rag_evaluator.py  test_rag_query.py  test_rag_retriever.py  test_rag_tools.py  test_registry.py  test_security_scanner.py  test_security_tools.py  test_threat_parsers.py  test_threat_tools.py
(+42 files in other folders)
