[project]
name = "secminiagent"
version = "0.2.0"
description = "A local security review agent CLI prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SecMiniAgent" }]
dependencies = []

[project.scripts]
secminiagent = "secminiagent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
