[project]
name = "secminiagent"
version = "0.3.0"
description = "A local security review agent CLI prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SecMiniAgent" }]
dependencies = []

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]

[project.scripts]
secminiagent = "secminiagent.cli:main"

[tool.setuptools.packages.find]
include = ["secminiagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
